Added image and description with adequate heading to chicken-biryani.html

--- a/recepies/chicken-biryani.html
+++ b/recepies/chicken-biryani.html
@@ -9,14 +9,19 @@
 <body>
     <h1>Chicken Biryani</h1>
 
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmlci6uqft0im.i.optimole.com%2FLqzsJqg-SxbbbX3C%2Fw%3Aauto%2Fh%3Aauto%2Fq%3Aauto%2Fhttps%3A%2F%2Fwww.cheerskitchenbyhp.com%2F%2F%2F%2F%2F%2F%2F%2F%2Fwp-content%2Fuploads%2F2020%2F06%2FOne-Pot-Chicken-Biryani.jpg&f=1&nofb=1">
+
+    <h3>Description</h3>
+
     <p>This is a delicious Pakistani/Indian rice dish which is often reserved for very special occasions such as weddings, parties, or holidays such as Ramadan. 
-        It has a lengthy preparation, but the work is definitely worth it. 
+        <br>It has a lengthy preparation, but the work is definitely worth it. 
         For biryani, always use long grain rice. 
         Basmati rice with its thin, fine grains is the ideal variety to use. 
-        Ghee is butter that has been slowly melted so that the milk solids and golden liquid 
+        <br>Ghee is butter that has been slowly melted so that the milk solids and golden liquid 
         have been separated and can be used in place of vegetable oil to yield a more authentic taste.
     </p>
     
+
     
 </body>
 </html>
