Added link of first recepie  in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>List of Recepies</h1>
+
+    <a href="./recepies/chicken-biryani.html">Chicken Biryani</a>
 </body>
 </html>
