Changed heading of the webpage and title of index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recepies</title>
+    <title>Famous Indian Recepies</title>
 </head>
 <body>
-    <h1>List of Recepies</h1>
+    <h2>List of Indian Recepies</h2>
 
     <a href="./recepies/chicken-biryani.html">Chicken Biryani</a>
+    
 </body>
 </html>
