--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h2>List of Indian Recepies</h2>
 
     <a href="./recepies/chicken-biryani.html">Chicken Biryani</a>
-    
+    <br>
+    <a href="./recepies/butter-chicken.html">Butter Chicken</a>
+
 </body>
 </html>
