Added image to index.html and included a brief description

--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <title>Famous Indian Recepies</title>
 </head>
 <body>
-    <h2>List of Indian Recepies</h2>
+    <h2>Indian Recepies</h2>
 
-    <a href="./recepies/chicken-biryani.html">Chicken Biryani</a>
-    <br>
-    <a href="./recepies/butter-chicken.html">Butter Chicken</a>
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.indianeagle.com%2Ftravelbeats%2Fwp-content%2Fuploads%2F2016%2F03%2FIndian-American-Chef-Vikas-Khannas-upcoming-documentary-explores-power-of-food-over-social-barriers.jpg&f=1&nofb=1">
+
+    <h3>A Brief introduction to Indian Cuisine</h3>
+    <p> Think of India and one of the first things that comes to mind is its diversity.<br> 
+        A large country, its population is second only to China, 
+        its languages are numerous and every state (of which there are 28 and seven Union territories) 
+        is unique in its traditions and very importantly, its food.<br>
+        In fact, food from one region may actually be totally alien to a person from another region! 
+        The common thread that runs through most Indian food, though, 
+        is the use of numerous spices to create flavor and aroma.
+    </p>
+
+    <ul>
+        <li><a href="./recepies/chicken-biryani.html">Chicken Biryani</a></li>
+        <li><a href="./recepies/butter-chicken.html">Butter Chicken</a></li>
+
+    </ul>
 
 </body>
 </html>
